--- a/.github/workflows/pr.yaml
+++ b/.github/workflows/pr.yaml
@@ -15,7 +15,7 @@ on:
 
 jobs:
   pr:
-    uses: canonical/bootstack-actions/.github/workflows/pull-request.yaml@main
+    uses: agileshaw/bootstack-actions/.github/workflows/pull-request.yaml@timeout-input
     secrets: inherit
     with:
       python-version-unit: "['3.8', '3.10']"
@@ -24,3 +24,4 @@ jobs:
       provider: lxd
       nested-containers: true
       commands: "['make functional']"
+      timeout-minutes: 120
